# civlike

./: .vimrc  CMakeLists.txt  README.md  TODO.md  main.cc  main.lua
civlike/: conf.lua  game.lua  main.lua
civlike/sample/: main.lua
game/: game.cc  game.hh  tile.hh
module/: game_module.cc  game_module.hh
rules/: game_rules.cc  game_rules.hh  id.hh
sample/: main.lua  sample_game.cc  sample_game.hh
tmp/: shapes_basic_shapes.c
ui/: graphics.cc  graphics.hh
